// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot testing should render circular when given circular property 1`] = `
<svg
  height={120}
  width={120}
>
  <circle
    className="-rotate-90 origin-center stroke-current"
    cx={60}
    cy={60}
    fill="transparent"
    r={52}
    strokeDasharray="376.99111843077515 376.99111843077515"
    strokeWidth={4}
    style={
      Object {
        "strokeDashoffset": "188.49555921538757",
      }
    }
  />
</svg>
`;

exports[`snapshot testing should render horizontally when given horizontal property 1`] = `
<div
  className="w-full h-3 bg-white flex items-center p-1 rounded-sm"
>
  <div
    className="h-1 rounded-sm bg-primary"
    style={
      Object {
        "width": "50%",
      }
    }
  />
</div>
`;

exports[`snapshot testing should render vertically when given vertical property 1`] = `
<div
  className="rounded-sm py-1 px-2 bg-white w-3 flex justify-center"
>
  <div
    className="w-2 rounded-sm bg-primary"
    style={
      Object {
        "height": "300px",
      }
    }
  >
    <div
      className="w-2 bg-white rounded-t-sm"
      style={
        Object {
          "height": "50%",
        }
      }
    />
  </div>
</div>
`;
